# Theia

./: .gitignore  README.md  crappy_shit.bag  data_7.txt  data_8.txt  theia_params
ControlMux/: CMakeLists.txt  manifest.xml~
HandFollow/: manifest.xml
HandFollow/msg/: vw.msg~  (+2 more)
MotorControl/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml~
a_star/: CMakeLists.txt
camera_trials/: mainpage.dox  manifest.xml~
mapping/: CMakeLists.txt  manifest.xml
path_planner/: CMakeLists.txt  mainpage.dox  manifest.xml
robot_messages/: mainpage.dox  manifest.xml  manifest.xml~
sensor_calib/: CMakeLists.txt  data_1.txt  data_2.txt  data_3.txt  data_4.txt  data_5.txt  data_6.txt  data_7.txt  data_8.txt  mainpage.dox  manifest.xml
theia/: mainpage.dox  manifest.xml  params.yaml
vision/vision_object/: CMakeLists.txt  mainpage.dox  manifest.xml
vision/vision_object/launch/: all.launch
vision/vision_object/msg/: Object.msg
vision/vision_object/src/: camera.h  cameraconfig.cpp  cameraconfig.h  cameracontext.cpp  cameracontext.h  candidate.cpp  candidate.h  candidateconfig.cpp  candidateconfig.h  candidatecontext.h  colorimageconfig.cpp  colorimageconfig.h  colorimagecontext.cpp  colorimagecontext.h  colorimagedata.cpp  colorimagedata.h  config.cpp  config.h  context.cpp  context.h  depthimagedata.cpp  depthimagedata.h  file.cpp  file.h  imagedata.cpp  imagedata.h  main.cpp  object.cpp  object.h  objectdata.cpp  objectdata.h  recog.cpp  recog.h  snap.cpp  train.cpp  train.h  traindata.cpp  traindata.h
vision/vision_object/src/vision_object/msg/: _Object.py
(+201 files in other folders)
